Fixing a bunch of elements not being properly left and right aligned on the page

--- a/src/assets/sass/partials/_content-table.scss
+++ b/src/assets/sass/partials/_content-table.scss
@@ -490,7 +490,7 @@
 }
 
 .number-col {
-  flex:0 0 50px;
+  flex:0 0 35px;
 }
 
 .button-col {
